--- a/scss/foundation/_base.scss
+++ b/scss/foundation/_base.scss
@@ -21,14 +21,13 @@ body {
   min-width: 350px;
   width: 100%;
   overflow-x: hidden;
- 
 }
 
 img,
 video,
 object {
   width: 100%;
-  height: 100%;
+  height: auto;
   border: none;
   display: block;
   object-fit: cover;
@@ -55,12 +54,4 @@ a:hover img {
 
 li {
   list-style: none;
-}
-
-h2 {
-  font-size: 3.2rem;
-}
-
-h3 {
-  font-size: 2.4rem;
 }
