--- a/scss/style.scss
+++ b/scss/style.scss
@@ -41,6 +41,7 @@
 @use "./object/component/price";
 @use "./object/component/subtitle";
 @use "./object/component/wrapper";
+@use "./object/component/fade";
 
 // -----------------------------------------------------------------
 // Project
