--- a/scss/object/component/_flex.scss
+++ b/scss/object/component/_flex.scss
@@ -11,9 +11,10 @@
     background: linear-gradient(92deg, #fff019, #fff);
     @include breakpoint(tablet) {
       width: 33vw;
+      margin-left: 20px;
     }
     @include breakpoint(pc) {
-      width: 25vw;
+      width: 11vw;
     }
   }
 
@@ -25,9 +26,10 @@
     background: linear-gradient(92deg, #fff019, #fff);
     @include breakpoint(tablet) {
       width: 50vw;
+      margin-left: 20px;
     }
     @include breakpoint(pc) {
-      width: 30vw;
+      width: 17vw;
     }
   }
 
@@ -39,9 +41,10 @@
     background: linear-gradient(92deg, #fff019, #fff);
     @include breakpoint(tablet) {
       width: 63vw;
+      margin-left: 20px;
     }
     @include breakpoint(pc) {
-      width: 40vw;
+      width: 23vw;
     }
   }
 
