--- a/scss/object/component/_text.scss
+++ b/scss/object/component/_text.scss
@@ -26,6 +26,12 @@
     letter-spacing: 2px;
     text-align: center;
   }
+
+  &__link {
+    border-bottom: double; /*二重線を引く*/
+    border-color: #ff0000;
+    border-width: 3px;
+  }
 }
 
 .c-text__tategaki {
